--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
-.App {
-    text-align: center;
-}
-
-.App-header {
+.App_header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
     font-size: calc(10px + 2vmin);
     color: white;
+}
+
+.App_header a {
+    color: wheat
+}
+
+.Nav_bar {
+    margin: 25px;
+}
+
+.content {
+    margin: 0 auto;
 }
