--- a/src/components/markdown_editor/MarkdownEditor.module.css
+++ b/src/components/markdown_editor/MarkdownEditor.module.css
@@ -1,16 +1,35 @@
 .wrapper {
     font-size: 100%;
     color: wheat;
-    /*display: flex;*/
+    padding: 8vmax;
+    border-radius: 10px;
+    transition-duration: 0.7s;
+}
+
+.wrapper:hover {
+    background-color: #36342c;
 }
 
 .instructions {
     font-size: 1vmax;
+    color: #fff200;
+    transition-duration: 0.2s;
+}
+
+.instructions:hover {
+    color: gold;
+    font-weight: bold;
 }
 
 textarea {
     height: 30vmax;
     width: 30vmax;
+    background: #eff1f5;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
 }
 
 .preview {
