--- a/src/components/creators/Creator.module.css
+++ b/src/components/creators/Creator.module.css
@@ -20,7 +20,8 @@
     padding: 15px 25px;
     display: block;
     margin-top: -14px;
-    margin-bottom: -15px;
+    margin-bottom: -14px;
+    cursor: default;
 }
 
 .bgc:hover a {
