--- a/src/components/timer/JustTimer.module.css
+++ b/src/components/timer/JustTimer.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     color: #ce7e15;
+    min-height: 95vh;
     padding: 5vmax;
     border-radius: 10px;
     transition-duration: 0.7s;
