--- a/src/components/browser_tabs/BrowserTabs.module.css
+++ b/src/components/browser_tabs/BrowserTabs.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     min-height: 95vh;
+    min-width: 65vmax;
     padding: 5vmax;
     border-radius: 10px;
     transition-duration: 0.7s;
