--- a/src/components/paper_rock_scissors/PaperRockScissors.module.css
+++ b/src/components/paper_rock_scissors/PaperRockScissors.module.css
@@ -3,11 +3,13 @@
     flex-direction: column;
     align-items: center;
     min-height: 95vh;
+    min-width: 65vmax;
     padding-top: 10vmax;
     padding-left: 5vmax;
     padding-right: 5vmax;
     color: #cadbf5;
     border-radius: 10px;
+    transition-duration: 0.7s;
 }
 
 .wrapper:hover {
