--- a/src/components/pomodoro_timer/PomodoroTimer.module.css
+++ b/src/components/pomodoro_timer/PomodoroTimer.module.css
@@ -1,6 +1,7 @@
 .wrapper {
     padding: 12vmax;
     min-height: 95vh;
+    min-width: 65vmax;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +12,7 @@
 }
 
 .wrapper:hover {
-    background-color: #253130;
+    background-color: #25524d;
 }
 
 h2 {
