--- a/src/components/timer/JustTimer.module.css
+++ b/src/components/timer/JustTimer.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     color: #ce7e15;
     min-height: 95vh;
+    min-width: 65vmax;
     padding: 5vmax;
     border-radius: 10px;
     transition-duration: 0.7s;
