--- a/src/components/browser_tabs/BrowserTabs.module.css
+++ b/src/components/browser_tabs/BrowserTabs.module.css
@@ -78,6 +78,7 @@
     background: #5131a9;
     color: #dacff7;
     flex: 1;
+    padding: 5px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
@@ -97,4 +98,15 @@
             rgba(123, 123, 123, 0)
     );
     transition: 0.3s ease all;
+}
+
+@media (max-width: 1280px) {
+    .wrapper {
+        min-width: 35vmax;
+        padding: 0;
+    }
+
+    .tab a {
+        padding: 10px 15px;
+    }
 }
