--- a/src/components/creators/Creator.module.css
+++ b/src/components/creators/Creator.module.css
@@ -33,3 +33,12 @@
     margin-top: -14px;
     margin-bottom: -15px;
 }
+
+@media (max-width: 1000px) {
+    .bgc a {
+        font-size: 2vmax;
+        padding: 13px 15px;
+        margin-top: -12px;
+        margin-bottom: -12px;
+    }
+}
