--- a/src/components/paper_rock_scissors/PaperRockScissors.module.css
+++ b/src/components/paper_rock_scissors/PaperRockScissors.module.css
@@ -62,6 +62,7 @@ h6 {
     font-size: 3vmax;
     margin-right: 5px;
 }
+
 .wins .text,
 .losses .text {
     margin-left: 5px;
@@ -238,4 +239,97 @@ h6 {
     flex-shrink: 1;
     background: #fa65ff;
     color: #fdedfd;
+}
+
+@media (max-width: 1220px) {
+    .wrapper {
+        min-width: 40vmax;
+        min-height: 75vh;
+        padding: 2vmax;
+        margin-top: 5vmax;
+    }
+
+    .choices {
+        grid-template-columns: 3fr 2fr 3fr;
+        margin-bottom: 25px;
+        margin-top: 5px;
+        grid-gap: 10px;
+    }
+
+    .choices button {
+        margin-bottom: 3px;
+        font-size: 50px;
+        padding: 10px;
+        border-radius: 50%;
+        height: 70px;
+        width: 70px;
+        transition: 0.1s ease all;
+    }
+
+    .vs {
+        width: 60px;
+        font-size: 60px;
+        opacity: 0.25;
+        transform: rotate(-0.1turn);
+        pointer-events: none;
+    }
+
+    .info {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .wrapper {
+        min-width: 35vmax;
+        padding-left: 1vmax;
+        padding-right: 1vmax;
+        padding-top: 20vmax;
+    }
+
+    .choices button {
+        margin-bottom: 3px;
+        font-size: 30px;
+        padding: 5px;
+        border-radius: 50%;
+        height: 40px;
+        width: 40px;
+        transition: 0.1s ease all;
+    }
+
+    .vs {
+        width: 30px;
+        font-size: 30px;
+        opacity: 0.25;
+        transform: rotate(-0.1turn);
+        pointer-events: none;
+    }
+
+    .info h2 {
+        font-size: 1.5vmax;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+
+    .wins .number,
+    .losses .number {
+        font-size: 3vmax;
+        margin-right: 0;
+    }
+
+    .wins .text,
+    .losses .text {
+        margin-left: 1px;
+        margin-right: 1px;
+        text-decoration: underline;
+    }
+
+    .wins {
+        margin-right: 1px;
+    }
 }
