--- a/src/components/browser_tabs/BrowserTabs.module.css
+++ b/src/components/browser_tabs/BrowserTabs.module.css
@@ -77,6 +77,7 @@
     justify-content: center;
     background: #5131a9;
     color: #dacff7;
+    font-size: 2vmax;
     flex: 1;
     padding: 5px;
     border-bottom-left-radius: 5px;
@@ -108,5 +109,23 @@
 
     .tab a {
         padding: 10px 15px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .wrapper {
+        min-width: 30vmax;
+        padding: 0;
+    }
+
+    .tab a {
+        padding: 5px 7px;
+    }
+}
+
+@media (max-width: 800px) {
+    .wrapper {
+        min-width: 25vmax;
+        padding: 0;
     }
 }
