--- a/src/components/creators/Creator.module.css
+++ b/src/components/creators/Creator.module.css
@@ -42,3 +42,12 @@
         margin-bottom: -12px;
     }
 }
+
+@media (max-width: 800px) {
+    .bgc a {
+        font-size: 1.5vmax;
+        padding: 10px 10px;
+        margin-top: -12px;
+        margin-bottom: -12px;
+    }
+}
