--- a/src/components/creators/Creator.module.css
+++ b/src/components/creators/Creator.module.css
@@ -34,6 +34,15 @@
     margin-bottom: -15px;
 }
 
+@media (max-width: 1200px) {
+    .bgc a {
+        font-size: 2vmax;
+        padding: 13px 15px;
+        margin-top: -13px;
+        margin-bottom: -13px;
+    }
+}
+
 @media (max-width: 1000px) {
     .bgc a {
         font-size: 2vmax;
@@ -47,7 +56,16 @@
     .bgc a {
         font-size: 1.5vmax;
         padding: 10px 10px;
-        margin-top: -12px;
+        margin-top: -11px;
         margin-bottom: -12px;
+    }
+}
+
+@media (max-width: 600px) {
+    .bgc a {
+        font-size: 1.5vmax;
+        padding: 10px 10px;
+        margin-top: -9px;
+        margin-bottom: -10px;
     }
 }
