--- a/src/components/paper_rock_scissors/PaperRockScissors.module.css
+++ b/src/components/paper_rock_scissors/PaperRockScissors.module.css
@@ -105,6 +105,7 @@ h6 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 1vmax;
 }
 
 .vs {
@@ -269,7 +270,7 @@ h6 {
     }
 
     .choices button {
-        margin-bottom: 3px;
+        margin-bottom: 20px;
         font-size: 50px;
         padding: 10px;
         border-radius: 50%;
@@ -324,7 +325,7 @@ h6 {
     }
 
     .choices button {
-        margin-bottom: 3px;
+        margin-bottom: 20px;
         font-size: 30px;
         padding: 5px;
         border-radius: 50%;
@@ -414,9 +415,9 @@ h6 {
         padding: 2vmax;
     }
 
-    .choices {
-        margin-bottom: 15px;
-    }
+    /*.choices {*/
+    /*    margin-bottom: 15px;*/
+    /*}*/
 
     /*
     .game_state_content {
