--- a/src/components/browser_tabs/BrowserTabs.module.css
+++ b/src/components/browser_tabs/BrowserTabs.module.css
@@ -11,6 +11,7 @@
 
 .wrapper:hover {
     background-color: #312a34;
+    background-image: url("https://webstockreview.net/images/dot-clipart-dot-pattern-4.png");
 }
 
 .browser {
