--- a/src/components/markdown_editor/MarkdownEditor.module.css
+++ b/src/components/markdown_editor/MarkdownEditor.module.css
@@ -11,6 +11,7 @@
 
 .wrapper:hover {
     background-color: #36342c;
+    background-image: url("https://www.onlygfx.com/wp-content/uploads/2018/07/8-grunge-circle-dot-8.png");
 }
 
 .instructions {
