--- a/src/components/pomodoro_timer/PomodoroTimer.module.css
+++ b/src/components/pomodoro_timer/PomodoroTimer.module.css
@@ -13,6 +13,7 @@
 
 .wrapper:hover {
     background-color: #25524d;
+    background-image: url("https://www.onlygfx.com/wp-content/uploads/2019/05/12-grunge-double-circle-1.png");
 }
 
 .wrapper h2 {
