--- a/src/components/timer/JustTimer.module.css
+++ b/src/components/timer/JustTimer.module.css
@@ -13,6 +13,7 @@
 
 .wrapper:hover {
     background-color: #1f403d;
+    background-image: url("https://www.pngarts.com/files/4/Dot-PNG-Image-Transparent.png");
 }
 
 h2 {
