--- a/src/components/infinite_image_gallery/InfiniteImageGallery.module.css
+++ b/src/components/infinite_image_gallery/InfiniteImageGallery.module.css
@@ -16,6 +16,7 @@
 
 .wrapper:hover {
     background-color: rgba(101, 0, 255, 0.25);
+    background-image: url("https://pnommensen.com/images/black-dots-png-19.png");
 }
 
 .error {
