--- a/src/components/trivia/Trivia.module.css
+++ b/src/components/trivia/Trivia.module.css
@@ -60,6 +60,9 @@
     appearance: none;
     width: auto;
     padding: 4px;
+    scrollbar-width: none; /*For Firefox*/;
+    -ms-overflow-style: none; /*For Internet Explorer 10+*/;
+    overflow: hidden; /*For Chrome*/;
 }
 
 .category_selector p {
@@ -133,11 +136,11 @@
     justify-content: center;
 }
 
-.result_modal.is_correct h3 {
+.is_correct h3 {
     color: rgb(63, 162, 63);
 }
 
-.result_modal.is_wrong h3 {
+.is_wrong h3 {
     color: rgb(211, 79, 79);
 }
 
@@ -156,7 +159,18 @@
 }
 
 .result_modal_content .correct_answer strong {
-    font-size: 40px;
+    font-size: 30px;
+    color: #cd1d1d;
+    line-height: normal;
+}
+
+.result_modal_content .correct_answer strong:hover {
+    text-decoration: underline;
+}
+
+.result_modal_content button:active {
+    background: #4dc0b5;
+    color: white;
 }
 
 /* main section ---------------------- */
@@ -207,6 +221,10 @@
     box-shadow: 2px 5px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
+.wrapper .app .question button:active {
+    background-color: #adadff;
+}
+
 /* footer section ---------------------- */
 
 .question_footer {
@@ -217,9 +235,18 @@
 .wrapper .app .question_footer button {
     background: #ccc;
     border-color: #aaa;
-    color: #777;
+    color: #333;
     width: auto;
     margin-left: auto;
     font-size: 12px;
     padding: 10px 20px;
+}
+
+.wrapper .app .question_footer button:hover {
+    background: #e7e7e7;
+}
+
+.wrapper .app .question_footer button:active {
+    background: #4dc0b5;
+    color: white;
 }
