Jan_26_#4 Authentication init

--- a/src/components/browser_tabs/BrowserTabs.module.css
+++ b/src/components/browser_tabs/BrowserTabs.module.css
@@ -11,7 +11,7 @@
 
 .wrapper:hover {
     background-color: #312a34;
-    background-image: url("https://webstockreview.net/images/dot-clipart-dot-pattern-4.png");
+    background-image: url("https://www.pngarts.com/files/1/Abstract-PNG-Free-Download.png");
 }
 
 .browser {
