--- a/src/components/authentication/Authentication.module.css
+++ b/src/components/authentication/Authentication.module.css
@@ -6,18 +6,12 @@
     color: #ce7e15;
     min-height: 95vh;
     min-width: 65vmax;
-    padding: 2vmax 5vmax;
+    padding: 0 5vmax;
     border-radius: 10px;
     transition-duration: 0.7s;
     text-align: center;
-    /*background: #000917;*/
     max-width: 1200px;
-    margin: 1vmax;
-}
-
-.wrapper:hover {
-    background-color: rgba(255, 215, 0, 0.22);
-    background-image: url("https://www.pngarts.com/files/1/Fractal-Abstract-PNG-Picture.png");
+    margin: 0 1vmax 0 1vmax;
 }
 
 h1,
@@ -30,13 +24,14 @@ h6 {
 }
 
 .app {
-    cursor: url('https://i.imgur.com/NBIhMDc.png'), auto;
+    cursor: url('https://image.flaticon.com/icons/png/512/1399/1399650.png'), auto;
 }
 
 .site_header {
+    border-radius: 5px;
     margin-bottom: auto;
-    position: fixed;
-    width: 100%;
+    position: relative;
+    width: 65vmax;
     left: 0;
     right: 0;
     top: 0;
@@ -53,7 +48,7 @@ h6 {
     padding: 4px 8px;
     font-size: 18px;
     font-family: 'Calistoga', cursive;
-    color: #333;
+    color: #25b75f;
     margin-right: 8px;
     text-decoration: none;
     background: none;
@@ -67,7 +62,8 @@ h6 {
 }
 
 .page {
-    min-height: 100vh;
+    min-height: 94vh;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -87,20 +83,29 @@ h6 {
     border-radius: 50px;
     position: absolute;
     color: #25b75f;
-    transform: rotate(-5deg) translateY(50px);
-    width: 100%;
+    transform: rotate(-5deg) translateY(20px);
+    width: 30vmax;
     bottom: 0;
     left: 0;
-    font-size: 60px;
+    font-size: 2.3vmax;
     line-height: 1;
+    margin-left: -7vmax;
 }
 
 .dashboard {
-    min-height: 100vh;
+    min-height: 94vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #104826;
     background-image: url('https://images.unsplash.com/photo-1506466010722-395aa2bef877?ixlib=rb-1.2.1&auto=format&fit=crop&w=2376&q=80');
     background-size: cover;
+}
+
+.home {
+
+}
+
+img {
+    width: 300px;
 }
