--- a/src/components/authentication/Authentication.module.css
+++ b/src/components/authentication/Authentication.module.css
@@ -5,12 +5,12 @@
     justify-content: center;
     color: #ce7e15;
     min-height: 95vh;
-    min-width: 65vmax;
-    padding: 0 5vmax;
+    min-width: 50%;
+    max-width: 100%;
+    padding: 0 20%;
     border-radius: 10px;
     transition-duration: 0.7s;
     text-align: center;
-    max-width: 1200px;
     margin: 0 1vmax 0 1vmax;
 }
 
@@ -20,18 +20,14 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Calistoga', cursive;
-}
-
-.app {
-    cursor: url('https://image.flaticon.com/icons/png/512/1399/1399650.png'), auto;
+    /*font-family: 'Calistoga', cursive;*/
 }
 
 .site_header {
     border-radius: 5px;
-    margin-bottom: auto;
+    margin-bottom: -49px;
     position: relative;
-    width: 65vmax;
+    width: 100%;
     left: 0;
     right: 0;
     top: 0;
@@ -39,7 +35,8 @@ h6 {
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.6);
+    transition-duration: 0.3s;
 }
 
 .site_header a,
@@ -54,6 +51,7 @@ h6 {
     background: none;
     border: none;
     cursor: pointer;
+    transition-duration: 0.3s;
 }
 
 .site_header a:hover,
@@ -63,13 +61,13 @@ h6 {
 
 .page {
     min-height: 94vh;
-    border-radius: 5px;
+    min-width: 65vmax;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #104826;
-    background-image: url('https://images.unsplash.com/photo-1505990941976-fa5c0b5a43f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80');
     background-size: cover;
+    border-radius: 5px;
 }
 
 .page > div {
@@ -81,7 +79,6 @@ h6 {
     background: rgba(255, 255, 255, 0.9);
     padding: 15px 30px;
     border-radius: 50px;
-    position: absolute;
     color: #25b75f;
     transform: rotate(-5deg) translateY(20px);
     width: 30vmax;
@@ -89,23 +86,146 @@ h6 {
     left: 0;
     font-size: 2.3vmax;
     line-height: 1;
-    margin-left: -7vmax;
+    margin-left: 0;
+    position: absolute;
 }
 
 .dashboard {
-    min-height: 94vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #104826;
     background-image: url('https://images.unsplash.com/photo-1506466010722-395aa2bef877?ixlib=rb-1.2.1&auto=format&fit=crop&w=2376&q=80');
-    background-size: cover;
 }
 
 .home {
-
+    background-image: url('https://images.unsplash.com/photo-1505990941976-fa5c0b5a43f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80');
 }
 
-img {
-    width: 300px;
+.page img {
+    border-radius: 30%;
+    transition-duration: 1s;
+    width: 50%;
+}
+
+.page img:hover {
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 50%;
+    width: 70%;
+    margin-top: -20%;
+}
+
+@media (max-width: 1500px) {
+    .page h2 {
+        margin-left: 3vmax;
+    }
+}
+
+@media (max-width: 1400px) {
+    .page h2 {
+        margin-left: 4vmax;
+    }
+}
+
+@media (max-width: 1300px) {
+    .page h2 {
+        margin-left: 6vmax;
+    }
+}
+
+@media (max-width: 1200px) {
+    .page h2 {
+        margin-left: 8vmax;
+    }
+}
+
+@media (max-width: 1150px) {
+    .page h2 {
+        margin-left: 9vmax;
+    }
+}
+
+@media (max-width: 1050px) {
+    .page h2 {
+        margin-left: 11vmax;
+    }
+}
+
+@media (max-width: 1000px) {
+    .page {
+        min-width: 60vmax;
+    }
+
+    .page h2 {
+        margin-left: 12vmax;
+    }
+}
+
+@media (max-width: 715px) {
+    .wrapper {
+        max-width: 40vmax;
+        padding: 5px;
+        margin-left: 6vmax;
+    }
+
+    .page {
+        min-width: 40vmax;
+    }
+
+    .page h2 {
+        margin-left: 20%;
+    }
+}
+
+@media (max-width: 600px) {
+    .wrapper {
+        max-width: 30vmax;
+    }
+
+    .page {
+        min-width: 30vmax;
+    }
+
+    .page h2 {
+        margin-left: 0;
+        padding: 10px;
+    }
+
+    .site_header {
+        padding: 10px 5px;
+        margin-bottom: -77px;
+    }
+}
+
+@media (max-width: 500px) {
+    .wrapper {
+        max-width: 23vmax;
+    }
+}
+
+@media (max-width: 450px) {
+    .wrapper {
+        max-width: 20vmax;
+    }
+}
+
+@media (max-width: 420px) {
+    .wrapper {
+        max-width: 15vmax;
+    }
+
+    .page {
+        min-width: 20vmax;
+    }
+
+    .page h2 {
+        font-size: 1.3vmax;
+        width: 20vmax;
+    }
+
+    .site_header {
+        padding: 10px 0;
+    }
+}
+
+@media (max-width: 350px) {
+    .wrapper {
+        max-width: 5vmax;
+    }
 }
