--- a/src/components/creators/Creator.module.css
+++ b/src/components/creators/Creator.module.css
@@ -16,6 +16,46 @@
     );
 }
 
+.arrows {
+    display: flex;
+    justify-content: space-between;
+}
+
+.arrows button {
+    width: 100%;
+    font-size: 100%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    border: 1px solid rgba(51, 51, 51, 0.1);
+}
+
+.arrows button:active {
+    background: radial-gradient(
+            rgb(50, 50, 50),
+            rgb(0, 0, 0)
+    );
+}
+
+.arrow_up:hover {
+    color: blue;
+    border: 1px solid rgba(0, 0, 255, 0);
+    background: radial-gradient(
+            rgb(0, 0, 0),
+            rgba(0, 0, 255, 0.4)
+    );
+    transition-duration: 0.5s;
+}
+
+.arrow_down:hover {
+    color: red;
+    border: 1px solid rgba(255, 0, 0, 0);
+    background: radial-gradient(
+            rgb(0, 0, 0),
+            rgba(255, 0, 0, 0.4)
+    );
+    transition-duration: 0.5s;
+}
+
 .bgc a {
     padding: 15px 25px;
     display: block;
